--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,6 +1,7 @@
-body{
-    margin: 0px;
-    padding: 0px;
-    color: #707070;
-    background-color: white;
+body {
+  font-family: "Spartan", "Segoe UI", "Roboto", sans-serif;
+  margin: 0px;
+  padding: 0px;
+  color: #707070;
+  background-color: white;
 }
