--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,6 +2,52 @@ body {
   font-family: "Spartan", "Segoe UI", "Roboto", sans-serif;
   margin: 0px;
   padding: 0px;
-  color: #707070;
+  color: #4c4c4c;
   background-color: white;
+}
+
+main {
+  padding: 0 6.33vw;
+}
+
+h1, h3 {
+  text-align: center;
+}
+
+.h-font {
+  font-family: "Staatliches", "Impact", cursive;
+}
+
+.question-wrapper {
+  text-align: center;
+  margin-bottom: 5vh;
+}
+
+.answer-wrapper {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  flex-direction: column;
+}
+
+.input-wrapper {
+  margin: 1em;
+}
+
+.hidden {
+  display: none;
+}
+
+button, .btn {
+  font-family: "Spartan", "Segoe UI", "Roboto", sans-serif;
+  background-color: inherit;
+  color: #4c4c4c;
+  padding: 1.5vh 1.5vw;
+  margin: 1.5vh 1.5vw;
+  border: 0.3em solid #4c4c4c;
+  border-radius: 3em;
+}
+
+button:hover, .btn:hover {
+  opacity: 0.7;
 }
