--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,13 +1,40 @@
 $headline-font: "Staatliches", "Impact", cursive;
 $main-font: "Spartan", "Segoe UI", "Roboto", sans-serif;
-$gray: #4c4c4c;
+$gray: #333333;
+$white: #f0f0e0;
+
+html{
+    font-size: 16px;
+}
 
 body{
     font-family: $main-font;
+    background-color: $white;
     margin: 0px;
     padding: 0px;
     color: $gray;
     background-color: white;
+}
+
+nav{
+    display: flex;
+    //position: fixed;
+    background-color: #78d11e;
+    justify-content: space-between;
+    padding: 1.5vh 6.33vw;
+    margin-bottom: 5vh;
+    h1.h-font{
+        font-size: 2em;
+    }
+    box-shadow: 2px 7px 10px $gray;
+}
+
+a{
+    color: inherit;
+    text-decoration: none;
+    &:hover{
+        text-decoration: underline;
+    }
 }
 
 main{
@@ -22,9 +49,23 @@ h1, h3{
     font-family: $headline-font;
 }
 
+h1.h-font{
+    font-size: 2.3em;
+}
+
+h2 .h-font{
+    font-size: 1.2em;
+}
+
+h3.h-font{
+    font-size: 1.5em;
+}
+
 .question-wrapper{
     text-align: center;
-    margin-bottom: 5vh;
+    margin-bottom: 10vh;
+    border-top: 0.2em solid $gray;
+    //border-radius: 3em;
 }
 
 .answer-wrapper{
@@ -36,6 +77,12 @@ h1, h3{
 
 .input-wrapper{
     margin: 1em;
+    text-align: left;
+    font-size: 1.1em;
+    font-weight: 500;
+    label{
+        margin-left: 1em;
+    }
 }
 
 .hidden{
@@ -53,4 +100,7 @@ button, .btn{
     &:hover{
         opacity: 0.7;
     }
+}
+.btn{
+    display: block;
 }
