--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,23 +1,53 @@
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes fadeInDelay {
+  0% {
+    opacity: 0;
+  }
+  30% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes fadeOut {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
+}
+
 html {
   font-size: 16px;
 }
 
 body {
   font-family: "Spartan", "Segoe UI", "Roboto", sans-serif;
-  background-color: #f0f0e0;
+  background-color: #f0f0ea;
   margin: 0px;
   padding: 0px;
   color: #333333;
-  background-color: white;
+  background-color: #f0f0ea;
 }
 
 nav {
   display: flex;
-  background-color: #78d11e;
+  background-color: #f0f0ea;
   justify-content: space-between;
   padding: 1.5vh 6.33vw;
   margin-bottom: 5vh;
-  box-shadow: 2px 7px 10px #333333;
+  box-shadow: 2px 3px 11px rgba(51, 51, 51, 0.5);
 }
 
 nav h1.h-font {
@@ -34,7 +64,9 @@ a:hover {
 }
 
 main {
+  animation: fadeIn 0.2s ease-in;
   padding: 0 6.33vw;
+  min-height: 80vh;
 }
 
 h1, h3 {
@@ -82,23 +114,74 @@ h3.h-font {
 }
 
 .hidden {
+  opacity: 0;
   display: none;
+}
+
+.result-container {
+  animation: fadeIn 0.3s ease-in;
+}
+
+.result-container h2 {
+  font-weight: 500;
+}
+
+.result-container .btn {
+  margin: 10vh 16.67vw;
+  text-align: center;
+  animation: fadeInDelay 2.5s ease-in;
+}
+
+.winners {
+  margin: 6.33vh 0;
+  animation: fadeInDelay 1.5s ease-in;
+}
+
+.all-options {
+  animation: fadeInDelay 2.5s ease-in;
 }
 
 button, .btn {
   font-family: "Spartan", "Segoe UI", "Roboto", sans-serif;
   background-color: inherit;
   color: #333333;
-  padding: 1.5vh 1.5vw;
+  padding: 1.5vh 1em;
   margin: 1.5vh 1.5vw;
   border: 0.3em solid #333333;
   border-radius: 3em;
+  font-weight: 600;
+  font-size: 1.1em;
 }
 
 button:hover, .btn:hover {
   opacity: 0.7;
+  color: #f0f0ea;
+  background-color: #333333;
 }
 
 .btn {
   display: block;
+}
+
+.btn-show {
+  margin: 5vh 32vw;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 30vh;
+}
+
+footer {
+  text-align: center;
+}
+
+@media (max-width: 460px) {
+  nav {
+    flex-direction: column;
+  }
+  nav h1.h-font {
+    margin: 0;
+  }
 }
